# accelera

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CNAME  README.md  api_gen.py  demo.py  index.html  mkdocs.yml  pipeline.xml  pyproject.toml  report_model.py  requirements.txt  sitemap.xml  test.xml  test_report.py
.github/workflows/: actions.yml  ci.yaml
accelera/: __init__.py
accelera/api/: __init__.py
accelera/api/accelera_pipe/: __init__.py
accelera/api/automl/: __init__.py
accelera/api/benchmark/: __init__.py
accelera/api/code_parallelizer/: __init__.py
accelera/api/core/: __init__.py
accelera/api/custom/: __init__.py
accelera/api/models/: __init__.py
accelera/api/utils/: __init__.py
accelera/api/wrappers/: __init__.py
accelera/bindings/: code_parallelizer_utils.cpp
accelera/bindings/core/: graph.cpp
accelera/src/: __init__.py  config.py
accelera/src/automl/: __init__.py
accelera/src/code_parallelizer/: __init__.py
accelera/src/core/: executed_graph.py  metric.py  parallelizer.py  pipeline.py  pipeline_test.py  report.py  report_base.py
accelera/src/custom/: clusterer.py  custom_test.py  regressor.py  transformer.py
accelera/src/models/: gemini.py  groq.py  huggingface.py  llm.py  ollama.py
accelera/src/utils/: accelera_utils.py  accelera_utils_test.py  array_utils.py  array_utils_test.py  code_utils.py  code_utils_test.py  dataset_retriever.py  dataset_retriever_test.py  mainera_utils_test.py  parallelizer.py  parallelizer_test.py  preprocessing.py  py2cpp_converter.py  py2cpp_converter_test.py
accelera/src/wrappers/: display_array_multi.py  display_array_single.py  display_dict.py  display_figure.py  display_single_number.py  display_string.py  display_tuple_not_curve.py  graph_pipeline_report.py  graph_report.py  model_report.py  supervised_metric.py  unsupervised_metric.py
aistudio/: __init__.py
aistudio/api/: __init__.py
aistudio/api/core/: __init__.py
aistudio/bindings/core/: graph.cpp  pipeline.cpp
aistudio/src/core/: graph.py  package.py  pipeline.py  pipeline_test.py
automl/: index.html
benchmark/: index.html
best_path/: pipeline.xml
code-parallelizer/: index.html
contributing/: index.html
core-pipeline/: index.html
data/: create_db.ipynb
deployment/: index.html
deployment_module/: Dockerfile  config.json  sample_input.csv  vcs.py
deployment_module/accelera_deployment/: deployment.py  modelservice.py  server.py
deployment_module/experiments/: experiments.json
deployment_module/experiments/3700a56/: metadata.json
deployment_module/experiments/5915068/: metadata.json
deployment_module/experiments/d84a26c/: metadata.json
deployment_module/experiments/e52fb4d/: metadata.json
docs/: automl.md  benchmark.md  code-parallelizer.md  contributing.md  core-pipeline.md  deployment.md  examples.md  index.md  installation.md
examples/: auo_preprocessing_comparison.ipynb  auo_preprocessing_comparison_1.ipynb  auo_preprocessing_comparison_2.ipynb  auo_preprocessing_comparison_drop_duplicates.ipynb  auto_preprocessing_demo.py  automl_demo.py  autopreprocessing-classification (1).ipynb  autopreprocessing-classification-v3.ipynb  autopreprocessing-classification.ipynb  code_optimizer_demo.ipynb  code_optimizer_demo.py  code_parallelizer_demo.ipynb  dataset_retriever_demo.ipynb  date_train.csv  demo.py  extract_loops.py  image_auto_preprocessing_demo.py  index.html  loop_example.py  parallelized_loop_example.c  parallelized_test_loops.c  report_model.py  segmentation-training-gp.ipynb  sklearn_comp.py  student_exam_performance_dataset.csv  test_loops  test_loops.c  test_loops.cpp
examples/best_path/: pipeline.xml
examples/house_price_preprocessing/: data_columns.pkl  report.html  target_info.pkl  target_processor.pkl  training_preprocessor.pkl
examples/titanic_preprocessing/: col_drop.pkl  data_columns.pkl  report.html  target_info.pkl  training_preprocessor.pkl
include/ast/: loop_ast_consumer.hpp  loop_frontend_action.hpp  loop_visitor.hpp
include/core/: config.hpp  constants.hpp  edge.hpp  graph.hpp  node.hpp  node_factory.hpp  pipeline.hpp  visibility.hpp
include/nodes/: branch.hpp  feature.hpp  input.hpp  merge.hpp  metric.hpp  model.hpp  predict.hpp  preprocess.hpp
include/passes/: node_fusion.hpp
include/utils/: code_parallelizer_utils.hpp  graph_utils.hpp
installation/: index.html
mainera/: __init__.py  test.txt
mainera/api/: __init__.py
mainera/api/automl/: __init__.py
mainera/api/code_parallelizer/: __init__.py
mainera/api/core/: __init__.py
mainera/api/custom/: __init__.py
mainera/api/models/: __init__.py
mainera/api/utils/: __init__.py
mainera/api/wrappers/: __init__.py
mainera/bindings/core/: graph.cpp
mainera/src/automl/: __init__.py  agent.py
mainera/src/code_parallelizer/: __init__.py
mainera/src/core/: executed_graph.py  metric.py  metric_display.py  pipeline.py  pipeline_test.py  report.py
mainera/src/custom/: classifier.py  clusterer.py  custom_class.py  custom_test.py  transformer.py
mainera/src/models/: gemini.py  groq.py  huggingface.py  llm.py  ollama.py
mainera/src/utils/: array_utils_test.py  code_optimizer.py  code_parallelizer.py  mainera_utils.py  mainera_utils_test.py  report_utils.py
mainera/src/wrappers/: display_array_multi.py  display_array_multi_wrapper.py  display_array_single.py  display_array_single_wrapper.py  display_dict.py  display_dict_wrapper.py  display_figure.py  display_single_number.py  display_string.py  (+23 more)
model_report/: README.md
models/: m1.ipynb
preprocessed_data/: clip_5.csv
search/: search_index.json
shell/: api_gen.sh  install_llvm.sh
src/ast/: loop_ast_consumer.cpp  loop_frontend_action.cpp  loop_visitor.cpp
src/cache_module/: model.py  preprocessing.py
src/core/: edge.cpp  graph.cpp  node.cpp  node_factory.cpp  pipeline.cpp
src/models/: README.md
src/nodes/: branch.cpp  feature.cpp  input.cpp  merge.cpp  metric.cpp  model.cpp  predict.cpp  preprocess.cpp
src/passes/: node_fusion.cpp
src/utils/: code_parallelizer_utils.cpp  graph_utils.cpp
tools/: generate_init.py
(+144 files in other folders)
